<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michihiroyamasaki.sample.activities.RegistActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="495dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="50dp"
                android:text="@string/heading_confirmation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="19dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/loginid"
                android:labelFor="@+id/loginIdEditText"
                app:layout_constraintBottom_toBottomOf="@+id/loginIdEditText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginIdEditText" />

            <EditText
                android:id="@+id/loginIdEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="53dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toRightOf="@+id/loginIDText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:labelFor="@+id/passwordEditText"
                app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
                app:layout_constraintRight_toRightOf="@+id/loginIDText"
                app:layout_constraintTop_toTopOf="@+id/passwordEditText"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="@+id/loginIdEditText"
                app:layout_constraintTop_toBottomOf="@+id/loginIdEditText" />


            <TextView
                android:id="@+id/genderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:labelFor="@+id/genderRadioGroup"
                app:layout_constraintBottom_toBottomOf="@+id/genderRadioGroup"
                app:layout_constraintRight_toRightOf="@+id/passwordText"
                app:layout_constraintTop_toTopOf="@+id/genderRadioGroup" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="227dp"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/famaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                android:id="@+id/prefectureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/prefecture"
                android:labelFor="@+id/prefectureSpinner"
                app:layout_constraintBottom_toBottomOf="@+id/prefectureSpinner"
                app:layout_constraintRight_toRightOf="@+id/genderText"
                app:layout_constraintTop_toTopOf="@+id/prefectureSpinner" />


            <Spinner
                android:id="@+id/prefectureSpinner"
                android:layout_width="219dp"
                android:layout_height="34dp"
                android:layout_marginTop="60dp"
                android:entries="@array/prefectures"
                app:layout_constraintLeft_toLeftOf="@+id/genderRadioGroup"
                app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/birthday"
                android:labelFor="@+id/birthdayEditText"
                app:layout_constraintBottom_toBottomOf="@+id/birthdayEditText"
                app:layout_constraintRight_toRightOf="@+id/prefectureText"
                app:layout_constraintTop_toTopOf="@+id/birthdayEditText" />

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="54dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="none"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/prefectureSpinner"
                app:layout_constraintRight_toRightOf="@+id/prefectureSpinner"
                app:layout_constraintTop_toBottomOf="@+id/prefectureSpinner" />


            <Button
                android:id="@+id/inputFinishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="38dp"
                android:text="@string/regist_confirm"
                app:layout_constraintRight_toRightOf="@+id/birthdayEditText"
                app:layout_constraintTop_toBottomOf="@+id/birthdayEditText" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
